# fastapi-backend-example

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yaml
app/: api.py  config.py  crud.py  db.py  exceptions.py  main.py  models.py  schemas.py  security.py  service.py
client/: .env.local  Dockerfile  README.md  package.json
client/components/: Button.js  Container.js  GlobalStyle.js  Input.js
client/pages/: index.js  login.js  search.js
tests/: conftest.py  test_crud.py  test_endpoints.py  test_external_api.py  test_security.py  vpic-api.json
